New in master
=============

* New default-config command to generate a clean configuration.  
* New ``thumbnail`` shortcode similar to the reStructuredText
  ``thumbnail`` directive (via Issue #2809)
* Rewrite ``nikola auto`` with asyncio and aiohttp (Issue #2850)
* New ``listings`` shortcode similar to the reStructuredText listings
  directive (Issue #2868)
* Switch to reStructuredText’s new HTML 5 renderer (Issue #2874)
* Deprecate ``html4css1.css`` in favor of ``rst_base.css`` (Issue
  #2874)
* Add support for ``MetadataExtractor`` plugins that allow custom,
  extensible metadata extraction from posts (Issue #2830)
* Support YAML and TOML metadata in 2-file posts (via Issue #2830)
* Renamed ``UNSLUGIFY_TITLES`` → ``FILE_METADATA_UNSLUGIFY_TITLES``
  (Issue #2840)
* Add ``NIKOLA_SHOW_TRACEBACKS`` environment variable that shows
  full tracebacks instead of one-line summaries
* Use ``PRETTY_URLS`` by default on all sites (Issue #1838)
* Feed link generation is completely refactored (Issue #2844)
* Let path handlers return absolute URLs (Issue #2876)

Bugfixes
--------

* Do not strip trailing slash in ``slug`` magic links
* Ignore empty tags in HTML metadata reader (Issue #2890)
* Do not remove doctype if ``add_header_permalinks`` or
  ``deduplicate_ids`` are used
* Handle empty slug metadata (Issue #2887)
* Fix crash when compiling empty ``.html`` posts (Issue #2851)
* Make failures to get source commit hash non-fatal in
  ``github_deploy`` (Issue #2847)
* Less cryptic error when guessing format from extension in ``new_post``
  fails
* Use Jupyter name more consistently in docs
* Support CODE_COLOR_SCHEME in Jupyter notebooks (Issue #2093)
* Language was not passed to title and link generation for page indexes
* Addressed issue with snaps not allowing certain functions to work properly.

Removed features
----------------

* Removed the slides directive for docutils, it will now be a separate plugin.