@@ -1,7 +1,10 @@
 New in master
 =============
 
-* New default-config command to generate a clean configuration.  
+Features
+--------
+
+* New default-config command to generate a clean configuration.
 * New ``thumbnail`` shortcode similar to the reStructuredText
   ``thumbnail`` directive (via Issue #2809)
 * Rewrite ``nikola auto`` with asyncio and aiohttp (Issue #2850)
@@ -24,6 +27,7 @@ New in master
 Bugfixes
 --------
 
+* Restore version number to Bootswatch URLs (Issue #2916)
 * Do not strip trailing slash in ``slug`` magic links
 * Ignore empty tags in HTML metadata reader (Issue #2890)
 * Do not remove doctype if ``add_header_permalinks`` or
